[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
# We are using setuptools_scm for versioning, so no version number is specified here.
dynamic = ["version"]
name = "TonkaConstruction"
authors = [{ name = "Nathanael Gentry", email = "nathanael.gentrydb8@gmail.com" }]
description = "Extract assets from Tonka Construction (1996)"
license = {file = "COPYING"}
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
keywords = ["reverse-engineering"]
requires-python = ">=3.9"
dependencies = [
    "self_documenting_struct>=0.9.2",
    "asset_extraction_framework>=0.9.4"
]

[tool.setuptools_scm]
# Empty since no extra settings are needed, presence enables setuptools_scm.

[project.urls]
Homepage = "https://github.com/npjg/TonkaConstruction"
Repository = "https://github.com/npjg/TonkaConstruction"

[project.scripts]
TonkaConstruction =  "TonkaConstruction:Engine.main"